# Controller/userPage.go
@@ -1,7 +1,8 @@
 package Controller
 
 import (
-	"MyTest/Logic/log"
+	"MyTest/Logic/Notice"
+	"MyTest/Logic/user_managment/TypeDefine"
 	"MyTest/Logic/user_managment/UserHandle"
 	"MyTest/Models/Error"
 	"MyTest/view"
@@ -15,23 +16,18 @@ import (
 // @Tags 加载用户信息界面接口
 // @Security ApiKeyAuth
 // @Success 200
-// @Router /users/{accountNum}/ [get]
+// @Router /users// [get]
 func LoadUsersPage() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		//捕获异常
-		defer log.RecoverPanic()
+		defer Notice.RecoverPanic()
 
-		accountStr := c.Param("accountNum")
+		accountStr := c.Param(TypeDefine.AccountNum)
 		accountNum, err := strconv.ParseInt(accountStr, 10, 64)
 		Error.NewErrHandle(err).WriteErr()
 
-		err = UserHandle.MatchUser(accountStr, accountNum, c.ClientIP())
-		if err != nil {
-			Error.NewErrHandle(err).WriteErr().ViewErr()
-		} else {
-			//显示用户信息
-			view.ShowMsgReceiver(UserHandle.GetMsgReceiver(accountNum))
-		}
+		//显示用户信息
+		view.ShowMsgReceiver(UserHandle.GetMsgReceiver(accountNum))
 
 	}
 }
